--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,75 +1,35 @@
 {% extends 'base.html.twig' %}
+
+{% block title %}Spill-Coffee-On-The-Keyboard{% endblock %}
 {% block body %}
-
-{{ parent() }}
-
+    {{ parent() }}
     <div class="container">
         <div class="row">
 
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-md-12 col-xl-8">
-        
+
+                        {% for article in articles %}
+
                         <div class="article-container mb-2">
                             <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
                                 <div class="col-auto d-block">
-                                    <img class="article-img" src=" {{ asset('images/article-2.jpeg') }}">
+                                    <img class="article-img" src="{{ asset(article.image) }}">
                                 </div>
                                 <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show') }}">
-                                    <h5 class="mb-2">Что делать, если надо верстать?</h5>
+                                    <h5 class="mb-2">{{ article.title }}</h5>
                                     <div class="d-flex mb-2">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/хэтээмэль_цеэсесович.png?set=set3"> Хэтээмэль Цеэсесович</div>
-                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i> 3 дня назад</div>
+                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="{{ article.src }}">
+                                            {{ article.author }}</div>
+                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i> {{ article.clock }} </div>
                                     </div>
                                     <div class="mb-2 d-flex">
-                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i> 5</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Html</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Css</span>
-                                    </div>
-                                    <div class="mb-2 text-muted">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsu…</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
-                                <div class="col-auto d-block">
-                                    <img class="article-img" src=" {{ asset('images/article-1.jpeg') }}">
-                                </div>
-                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show') }}">
-                                    <h5 class="mb-2">Facebook ест твои данные</h5>
-                                    <div class="d-flex mb-2">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/not_facebook.png?set=set3"> Not Facebook</div>
-                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i> 26 дней назад</div>
-                                    </div>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i> 0</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Facebook</span>
-                                    </div>
-                                    <div class="mb-2 text-muted">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsu…</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                        
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
-                                <div class="col-auto d-block">
-                                    <img class="article-img" src=" {{ asset('images/article-3.jpg') }}">
-                                </div>
-                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show') }}">
-                                    <h5 class="mb-2">Когда пролил кофе на клавиатуру</h5>
-                                    <div class="d-flex mb-2">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/поливайкин.png?set=set3"> Поливайкин</div>
-                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i> 1 месяц назад</div>
-                                    </div>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i> 300</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Балбес</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Криворучка</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Рукопоп</span>
+                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i> {{ article.comment }}</span>
+
+                                        {% for badge in article.badgies %}
+                                          <span class="badge badge-pill badge-secondary mr-2">{{ badge }}</span>
+                                        {% endfor %}
                                     </div>
                                     <div class="mb-2 text-muted">
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsu…</p>
@@ -78,54 +38,10 @@
                             </div>
                         </div>
 
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
-                                <div class="col-auto d-block">
-                                    <img class="article-img" src=" {{ asset('images/article-2.jpeg') }}">
-                                </div>
-                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show') }}">
-                                    <h5 class="mb-2">Что делать, если надо верстать?</h5>
-                                    <div class="d-flex mb-2">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/хэтээмэль_цеэсесович.png?set=set3"> Хэтээмэль Цеэсесович</div>
-                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i> 3 дня назад</div>
-                                    </div>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i> 5</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Html</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Css</span>
-                                    </div>
-                                    <div class="mb-2 text-muted">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsu…</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
 
-                        <div class="article-container mb-2">
-                            <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
-                                <div class="col-auto d-block">
-                                    <img class="article-img" src=" {{ asset('images/article-3.jpg') }}">
-                                </div>
-                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show') }}">
-                                    <h5 class="mb-2">Когда пролил кофе на клавиатуру</h5>
-                                    <div class="d-flex mb-2">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="https://robohash.org/поливайкин.png?set=set3"> Поливайкин</div>
-                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i> 1 месяц назад</div>
-                                    </div>
-                                    <div class="mb-2 d-flex">
-                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i> 300</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Балбес</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Криворучка</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Рукопоп</span>
-                                    </div>
-                                    <div class="mb-2 text-muted">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsu…</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
-        
+
                     <div class="col-md-12 col-xl-4">
                         <div class="text-center bg-primary text-white py-1 border border-bottom-0">
                             <h4 class="mb-0">Последние комменты</h4>
@@ -155,5 +71,6 @@
             </div>
         </div>        
     </div>
+
 
  {% endblock %}
