--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,24 +1,20 @@
-        <title>{% block title %}Welcome!{% endblock %}</title>
-
-     {% block body %}
-     <!DOCTYPE html>
-     <html lang="ru">  
+<!DOCTYPE html>
+ <html lang="ru">
      <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/ico" sizes="16x16" href="/favicon.ico">
-    
+
     {% block stylesheets %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
     <link rel="stylesheet" href="{{ asset('css/detail.css') }}">
 	{% endblock %}
-	
-    <title>Spill-Coffee-On-The-Keyboard</title>
-</head>
+         <title>{% block title %}Spill-Coffee-On-The-Keyboard{% endblock %}</title>
+ </head>
 <body>
-	
+{% block body %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container py-2">
 
@@ -67,10 +63,12 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         {% endblock %}
+
+{% endblock %}
     </body>
 </html>
 
- {% endblock %}
+
 
 
 
