--- a/templates/detail.html.twig
+++ b/templates/detail.html.twig
@@ -1,4 +1,7 @@
 {% extends 'base.html.twig' %}
+
+{% block title %} {{ article.title}} {% endblock %}
+
 {% block body %}
 
 {{ parent() }}
@@ -14,18 +17,18 @@
                             <div class="media d-flex align-content-center">
                                 <img class="article-detail-image align-self-start mr-3 rounded" src=" {{ asset('images/article-3.jpg') }}">
                                 <div class="media-body d-inline-block align-self-center">
-                                    <h1 class="mb-2">{% block title %}Когда пролил кофе на клавиатуру{% endblock %}</h1>
+                                    <h1 class="mb-2">{{ article.title }}</h1>
                                     <div class="d-flex mb-2">
                                         <div class="text-muted align-self-center">
-                                            <img class="article-author-img rounded-circle mr-2" src="https://robohash.org/флекс_абсолютович.jpg?set=set3">
-                                            Флекс Абсолютович
+                                            <img class="article-author-img rounded-circle mr-2" src="{{ article.src }}">
+                                            {{ article.author }}
                                         </div>
-                                        <div class="text-muted align-self-center ml-4"><i class="fas fa-clock size-is-"></i> 1 месяц назад</div>
+                                        <div class="text-muted align-self-center ml-4"><i class="fas fa-clock size-is-"></i> {{ article.clock }}</div>
                                     </div>
                                     <div class="mb-2 d-flex">
-                                        <span class="badge badge-pill badge-secondary mr-2">Балбес</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Криворучка</span>
-                                        <span class="badge badge-pill badge-secondary mr-2">Рукопоп</span>
+                                        {% for badge in article.badgies %}
+                                            <span class="badge badge-pill badge-secondary mr-2">{{ badge }}</span>
+                                        {% endfor %}
                                     </div>
                                     <div class="mb-2">
                                         <div class="text-muted align-self-center article-detail-arrows">
