домашнее задание "Основы Symfony"

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -10,14 +10,14 @@
                 <div class="row">
                     <div class="col-md-12 col-xl-8">
 
-                        {% for article in articles %}
+                        {% for key, article in articles %}
 
                         <div class="article-container mb-2">
                             <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
                                 <div class="col-auto d-block">
                                     <img class="article-img" src="{{ asset(article.image) }}">
                                 </div>
-                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show') }}">
+                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show', { slug: key }) }}">
                                     <h5 class="mb-2">{{ article.title }}</h5>
                                     <div class="d-flex mb-2">
                                         <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="{{ article.src }}">
