--- a/templates/articles/detail.html.twig
+++ b/templates/articles/detail.html.twig
@@ -40,34 +40,12 @@
                                 </div>
                             </div>
                         </div>
-                        
 
                         <div class="col-12 mt-2 mb-4">
-                            <p>Lorem ipsum <strong>кофе</strong> dolor sit amet, consectetur adipiscing elit, sed
-                                do eiusmod tempor incididunt <a href="/">Фронтенд Абсолютович</a> ut labore et dolore magna aliqua.
-                                Purus viverra accumsan in nisl. Diam vulputate ut pharetra sit amet aliquam. Faucibus a
-                                pellentesque sit amet porttitor eget dolor morbi non. Est ultricies integer quis auctor
-                                elit sed. Tristique nulla aliquet enim tortor at. Tristique et egestas quis ipsum. Consequat semper viverra nam
-                                libero. Lectus quam id leo in vitae turpis. In eu mi bibendum neque egestas congue
-                                quisque egestas diam. <strong>кофе</strong> blandit turpis cursus in hac habitasse platea dictumst quisque.</p>
 
-                            <p>Ullamcorper malesuada proin libero nunc consequat interdum varius sit amet. Odio pellentesque
-                                diam volutpat commodo sed egestas. Eget nunc lobortis mattis aliquam. Cursus vitae congue
-                                mauris rhoncus aenean vel. Pretium viverra suspendisse potenti nullam ac tortor vitae.
-                                A pellentesque sit amet porttitor eget dolor. Nisl nunc mi ipsum faucibus vitae. Purus sit amet
-                                luctus venenatis lectus magna fringilla urna. Sit amet tellus cras adipiscing enim. Euismod
-                                nisi porta lorem mollis aliquam ut porttitor leo.</p>
-
-                            <p>Morbi blandit cursus risus at ultrices. Adipiscing vitae proin sagittis nisl rhoncus mattis
-                                rhoncus. Sit amet commodo nulla facilisi. In fermentum et sollicitudin ac orci phasellus
-                                egestas tellus. Sit amet risus nullam eget felis. Dapibus ultrices in iaculis nunc sed
-                                augue lacus viverra. Dictum non consectetur a erat nam at. Odio ut enim blandit volutpat
-                                maecenas. Turpis cursus in hac habitasse platea. Etiam erat velit scelerisque in. Auctor
-                                neque vitae tempus quam pellentesque nec nam aliquam. Odio pellentesque diam volutpat commodo
-                                sed egestas egestas. Egestas dui id ornare arcu odio ut.</p>
+                            {{ articleContent | raw }}
 
                         </div>
-
 
                         <div class="col-sm-12 mb-4">
                             <h3><i class="pr-3 far fa-comment text-secondary"></i>3 Комментария</h3>
