домашнее задание Doctrine ORM

--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -10,25 +10,25 @@
                 <div class="row">
                     <div class="col-md-12 col-xl-8">
 
-                        {% for key, article in articles %}
+                        {% for article in articles %}
 
                         <div class="article-container mb-2">
                             <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
                                 <div class="col-auto d-block">
-                                    <img class="article-img" src="{{ asset(article.image) }}">
+                                    <img class="article-img" src="{{ asset(article.imagePath) }}">
                                 </div>
-                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show', { slug: key }) }}">
+                                <a class="col px-4 d-flex flex-column article-item" href="{{ path('app_article_show', {slug: article.slug}) }}">
                                     <h5 class="mb-2">{{ article.title }}</h5>
                                     <div class="d-flex mb-2">
-                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="{{ article.src }}">
+                                        <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="{{ article.AuthorAvatarPath }}">
                                             {{ article.author }}</div>
-                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i>{{ article.clock }}</div>
+                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i>{{ article.publishedAt ? article.publishedAt|ago : 'не опубликована' }}</div>
                                     </div>
                                     <div class="mb-2 d-flex">
-                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i>{{ article.comment }}</span>
+                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i>{{ article.votecount }}</span>
 
-                                        {% for badge in article.badgies %}
-                                          <span class="badge badge-pill badge-secondary mr-2">{{ badge }}</span>
+                                        {% for keyword in keywords %}
+                                            <span class="badge badge-pill badge-secondary mr-2">{{ keyword }}</span>
                                         {% endfor %}
                                     </div>
                                     <div class="mb-2 text-muted">
@@ -67,6 +67,8 @@
                             </div>
                         </div>
                     </div>
-
-
+                </div>
+            </div>
+        </div>
+    </div>
  {% endblock %}
