--- a/templates/article/detail.html.twig
+++ b/templates/article/detail.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base_content.html.twig' %}
-
+{% block keywords %}{% if article.keywords %}{{ article.keywords }}{% endif %}{% endblock %}
 {% block title %} {{ article.title }} {% endblock %}
 
 {% block content_row_class %} {{ parent() }} no-gutters featured-border{% endblock %}
@@ -9,26 +9,32 @@
 
 <div class="col-sm-12 p-2">
     <div class="media d-flex align-content-center">
-        <img class="article-detail-image align-self-start mr-3 rounded" src="{{ asset('images/article-3.jpg') }}">
+        <img class="article-detail-image align-self-start mr-3 rounded" src="{{ asset(article.imagePath) }}">
         <div class="media-body d-inline-block align-self-center">
             <h1 class="mb-2">{{ article.title }}</h1>
             <div class="d-flex mb-2">
                 <div class="text-muted align-self-center">
-                    <img class="article-author-img rounded-circle mr-2" src="{{ article.src }}">
+                    <img class="article-author-img rounded-circle mr-2" src="{{ article.AuthorAvatarPath }}">
                     {{ article.author }}
                 </div>
-                <div class="text-muted align-self-center ml-4"><i class="fas fa-clock size-is-"></i>{{ article.clock }}</div>
+                <div class="text-muted align-self-center ml-4"><i class="fas fa-clock size-is-"></i>{{ article.publishedAt ? article.publishedAt|ago : 'не опубликована' }}</div>
             </div>
             <div class="mb-2 d-flex">
-                {% for badge in article.badgies %}
-                    <span class="badge badge-pill badge-secondary mr-2">{{ badge }}</span>
-                {% endfor %}
+                {% for keyword in keywords %}
+                    <span class="badge badge-pill badge-secondary mr-2">{{ keyword }}</span>
+                 {% endfor %}
             </div>
             <div class="mb-2">
-                <div class="text-muted align-self-center article-detail-arrows">
-                    120
-                    <button class="btn btn-success ml-3"><i class="fas fa-arrow-up"></i></button>
-                    <button class="btn btn-danger"><i class="fas fa-arrow-down"></i></button>
+                <div class="text-muted align-self-center article-detail-arrows" data-id="voteBlock">
+                    <span class="{% if article.voteCount > 0 %}text-success {% elseif article.voteCount < 0 %}text-danger{% endif %}" data-id="voteCount">
+                        {{ article.voteCount }}
+                    </span>
+                    <button class="btn btn-success ml-3"  data-id="voteButton" data-href="{{ path('article_vote_up', {slug: article.slug}) }}">
+                        <i class="fas fa-arrow-up"></i>
+                    </button>
+                    <button class="btn btn-danger" data-id="voteButton" data-href="{{ path('article_vote_down', {slug: article.slug}) }}">
+                        <i class="fas fa-arrow-down"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -37,7 +43,7 @@
 
 <div class="col-12 mt-2 mb-4">
 
-    {{ articleContent | cached_markdown }}
+    {{ article.body | cached_markdown }}
 
 </div>
 
@@ -100,5 +106,10 @@
 
 </div>
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/vote.js') }}"></script>
 {% endblock %}
+{% endblock %}
+
 
