домашнее задание Doctrine ORM - исправление 1

--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -2,7 +2,7 @@
     height: 250px;
 }
 
-.article-detail .article-detail-arrows {
+.article-detail .article-detail-hearts {
     cursor: pointer;
 }
 
