--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Spill-Coffee-On-The-Keyboard{% endblock %}
+{% block title %}{% endblock %}
 {% block body %}
     {{ parent() }}
     <div class="container">
