--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -26,10 +26,12 @@
                                     </div>
                                     <div class="mb-2 d-flex">
                                         <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i>{{ article.votecount }}</span>
-
-                                        {% for keyword in keywords %}
-                                            <span class="badge badge-pill badge-secondary mr-2">{{ keyword }}</span>
-                                        {% endfor %}
+                                        {% if article.keywords %}
+                                            {% set keywords = article.keywords|split(',') %}
+                                            {% for keyword in keywords %}
+                                                <span class="badge badge-pill badge-secondary mr-2">{{ keyword }}</span>
+                                            {% endfor %}
+                                        {% endif %}
                                     </div>
                                     <div class="mb-2 text-muted">
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsu…</p>
