связи в Doctrine часть 1

--- a/templates/admin/comments/admin.html.twig
+++ b/templates/admin/comments/admin.html.twig
@@ -23,6 +23,16 @@
                         <button type="submit" class="btn btn-outline-secondary"><i class="fa fa-search"></i></button>
                     </div>
                 </div>
+                <div class="input-group mb-3">
+                    <div class="form-check">
+                    <input type="checkbox"
+                           name="showDeleted"
+                           class="form-check-input"
+                           {% if app.request.query.has('showDeleted') %} checked {% endif %}
+                    >
+                        <label class="form-check-label">Показать удаленные</label>
+                    </div>
+                </div>
             </form>
             <table class="table table-striped">
                 <thead>
@@ -36,10 +46,10 @@
                 <tbody>
                 {% for comment in  comments %}
                 <tr>
-                    <td><a href="#">{{ comment.articleTitle }}</a></td>
+                    <td><a href="{{ path('app_article_show', { slug: comment.article.slug }) }}">{{ comment.article.title }}</a></td>
                     <td>{{ comment.authorName }}</td>
-                    <td style="width: 20%;">{{ comment.comment|u.truncate(40, '...') }}</td>
-                    <td> {{ comment.createdAt|ago }} </td>
+                    <td style="width: 20%;">{{ comment.content|u.truncate(40, '...') }}</td>
+                    <td> {{ comment.createdAt|ago }} {% if comment.deletedAt %}DELETED{% endif %}</td>
                 </tr>
                 {% else %}
                 <tr>
