--- a/templates/article/homepage.html.twig
+++ b/templates/article/homepage.html.twig
@@ -11,7 +11,6 @@
                     <div class="col-md-12 col-xl-8">
 
                         {% for article in articles %}
-
                         <div class="article-container mb-2">
                             <div class="row no-gutters border flex-md-row p-3 mb-4 shadow-sm">
                                 <div class="col-auto d-block">
@@ -22,10 +21,10 @@
                                     <div class="d-flex mb-2">
                                         <div class="text-muted align-self-center"><img class="article-author-img rounded-circle" src="{{ article.AuthorAvatarPath }}">
                                             {{ article.author }}</div>
-                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i>{{ article.publishedAt ? article.publishedAt|ago : 'не опубликована' }}</div>
+                                        <div class="text-muted align-self-center ml-3"><i class="fas fa-clock size-is-"></i>{{ article.publishedAt ? article.publishedAt|ago }}</div>
                                     </div>
                                     <div class="mb-2 d-flex">
-                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i>{{ article.votecount }}</span>
+                                        <span class="badge badge-primary mr-2"><i class="fas fa-comment"></i>{{ article.nonDeletedComments|length }}</span>
                                         {% if article.keywords %}
                                             {% set keywords = article.keywords|split(',') %}
                                             {% for keyword in keywords %}
@@ -34,12 +33,11 @@
                                         {% endif %}
                                     </div>
                                     <div class="mb-2 text-muted">
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting  industry. Lorem Ipsu…</p>
+                                        <p>{{ article.description }}</p>
                                     </div>
                                 </a>
                             </div>
                         </div>
-
                         {% endfor %}
 
                     </div>
@@ -49,24 +47,15 @@
                             <h4 class="mb-0">Последние комменты</h4>
                         </div>
                         <div class="quotes-container bg-white shadow-sm border border-top-0 pb-2 pt-2 px-5">
+
+                            {% for comment in latestComments %}
                             <div class="border-bottom mb-3">
-                                <div class="h4 text-left"># Когда пролил кофе на клавиатуру</div>
-                                <p><i class="far fa-comment text-secondary"></i> "Очень жизненно, аж прослезился"
+                                <div class="h4 text-left"># {{ comment.article.title }}</div>
+                                <p><i class="far fa-comment text-secondary"></i> {{ comment.content }}
                                     <br> — <a href="#">Василий ПиЭйчПи, Программист Ruby</a></p>
                             </div>
-                            
-                            <div class="border-bottom mb-3">
-                                <div class="h4 text-left"># Facebook ест твои данные</div>
-                                <p><i class="far fa-comment text-secondary"></i> "Backend'еры плакали, кололись, но продолжали верстать сайт"
-                                    <br> — <a href="#">Флекс Абсолютович, Верстак от бога</a></p>
-                            </div>
-        
-                            
-                            <div>
-                                <div class="h4 text-left"># Что делать, если надо верстать?</div>
-                                <p><i class="far fa-comment text-secondary"></i> "Ой, я сайт перепутал"
-                                    <br> — <a href="#">Барон Сосискин, Дегустатор сосисок</a></p>
-                            </div>
+                            {% endfor %}
+
                         </div>
                     </div>
                 </div>
