--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -60,4 +60,5 @@ body {
     justify-content: space-between;
     align-items: center;
 }
-@import "detail.css";
+@import "./detail.css";
+@import "./signin.css";
