--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,11 +36,11 @@
                             <a class="dropdown-item" href="/create.html">Создать статью</a>
                             <a class="dropdown-item" href="/admin.html">Админ</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Выйти</a>
+                            <a class="dropdown-item" href="{{ path('app_logout') }}">Выйти</a>
                         </div>
                     </li>
                     <li class="nav-item d-flex my-auto">
-                        <a class="btn btn-outline-light my-2 my-sm-0 mr-2" href="/auth.html">Войти</a>
+                        <a class="btn btn-outline-light my-2 my-sm-0 mr-2" href="{{ path('app_login') }}">Войти</a>
                         <a class="btn btn-outline-light my-2 my-sm-0" href="/register.html">Регистрация</a>
                     </li>
                 </ul>
