Роли, уровни доступов и безопасность

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,11 @@
 {% endblock %}
 <title>{% block title %}{% endblock %}  Spill-Coffee-On-The-Keyboard</title>
 <body>
+{% if is_granted('ROLE_PREVIOUS_ADMIN') %}
+    <div class="alert alert-warning">
+        Имперсонализация включена. <a href="{{ path('app_homepage', {'_switch_user': '_exit'}) }}">Выйти</a>
+    </div>
+{% endif %}
 {% block body %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
         <div class="container py-2">
@@ -27,22 +32,27 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav my-2 my-lg-0">
+                {% if is_granted('ROLE_USER') %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img class="nav-profile-img rounded-circle" src="{{ asset('images/profile.png') }}">
+                            <img class="nav-profile-img rounded-circle" src="{{ app.user.avatarUrl }}">
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/profile.html">Профиль</a>
+                            <a class="dropdown-item" href="{{ path('app_account') }}">Профиль</a>
+                            {% if is_granted('ROLE_ADMIN_COMMENT') or is_granted('ROLE_ADMIN_TAG') %}
                             <a class="dropdown-item" href="/create.html">Создать статью</a>
-                            <a class="dropdown-item" href="/admin.html">Админ</a>
+                            <a class="dropdown-item" href="{{ path('app_admin') }}">Админ</a>
+                            {% endif %}
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{ path('app_logout') }}">Выйти</a>
                         </div>
                     </li>
+                    {% else %}
                     <li class="nav-item d-flex my-auto">
                         <a class="btn btn-outline-light my-2 my-sm-0 mr-2" href="{{ path('app_login') }}">Войти</a>
                         <a class="btn btn-outline-light my-2 my-sm-0" href="/register.html">Регистрация</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
