--- a/templates/base_content.html.twig
+++ b/templates/base_content.html.twig
@@ -9,7 +9,7 @@
 
             <div class="col-12">
 
-                <div class="row {% block content_row_class %}order flex-md-row mb-4 shadow-sm bg-white{% endblock %}">
+                <div class="row {% block content_row_class %}border flex-md-row mb-4 shadow-sm bg-white{% endblock %}">
                     <div class="col-sm-12{% block content_col_class %}{% endblock %}">
                         {% block content %}{% endblock %}
                     </div>
