Регистрация и классы Voter

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,7 +50,7 @@
                     {% else %}
                     <li class="nav-item d-flex my-auto">
                         <a class="btn btn-outline-light my-2 my-sm-0 mr-2" href="{{ path('app_login') }}">Войти</a>
-                        <a class="btn btn-outline-light my-2 my-sm-0" href="/register.html">Регистрация</a>
+                        <a class="btn btn-outline-light my-2 my-sm-0" href="{{ path('app_register') }}">Регистрация</a>
                     </li>
                     {% endif %}
                 </ul>
