Регистрация и классы Voter1

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,8 +39,9 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ path('app_account') }}">Профиль</a>
-                            {% if is_granted('ROLE_ADMIN_COMMENT') or is_granted('ROLE_ADMIN_TAG') %}
-                            <a class="dropdown-item" href="/create.html">Создать статью</a>
+                            {% if is_granted('ROLE_ADMIN_ARTICLE') %}
+                            <a class="dropdown-item" href="{{ 'app_admin_articles_create' }}">Создать статью</a>
+                            {% elseif is_granted('ROLE_ADMIN_COMMENT') or is_granted('ROLE_ADMIN_TAG') %}
                             <a class="dropdown-item" href="{{ path('app_admin') }}">Админ</a>
                             {% endif %}
                             <div class="dropdown-divider"></div>
