--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -10,6 +10,9 @@
         <li class="nav-item">
             <a  class="nav-link" href="{{ path('app_admin_tags') }}">Теги</a>
         </li>
+        <li class="nav-item">
+            <a  class="nav-link" href="{{ path('app_admin_articles') }}">Статьи</a>
+        </li>
     </ul>
 {% endblock %}
 
