--- a/templates/admin/article/create.html.twig
+++ b/templates/admin/article/create.html.twig
@@ -1,9 +1,15 @@
 {% extends 'base.html.twig' %}
 
+
+
 {% block title %}Создание статьи{% endblock %}
 
 {% block body %}
+
+    {{ parent() }}
+
 <div class="container">
+    {% if showError %}
     <div class="row">
         <div class="col-12">
             <div class="alert alert-danger" role="alert">
@@ -11,7 +17,7 @@
             </div>
         </div>
     </div>
-    
+    {% endif %}
     <div class="row">
         <div class="col-12">
             <div class="p-4 border rounded-lg mb-4 shadow-sm bg-white">
