--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -2,74 +2,38 @@
 {% block body %}
     {{ parent() }}
 
-<div class="container">
-    <div class="row">
-        {% if error %}
-            <div class="col-12">
-                <div class="alert alert-danger" role="alert">
-                    {{ error.messageKey|trans(error.messageData, 'security') }}
-                </div>
-            </div>
-        {% endif %}
+    <div class="container">
+        <div class="row">
 
-        <div class="col-sm-12">
+            <div class="col-sm-12">
 
-            <form class="form-signin" method="POST">
+                {{ form_start(registrationForm,{
+                    attr: {class: 'form-signin' }
+                }) }}
                 <h1 class="h3 mb-3 font-weight-normal">Регистрация</h1>
-                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
                 <div class="form-group">
 
-                    <label for="inputEmail" class="sr-only">Email адрес</label>
-                    <input
-                            type="email"
-                            id="inputEmail"
-                            name="email"
-                            value=""
-                            class="form-control"
-                            placeholder="Ваш Email..."
-                            required
-                            autofocus
-                    >
+                    {{ form_row(registrationForm.email, {
+                        attr: { placeholder: 'Ваш Email...'},
+                        label_attr: {class: 'sr-only'}
+                    }) }}
+                    {{ form_row(registrationForm.plainPassword, {
+                        attr: { placeholder: 'Ваш Пароль...'},
+                        label_attr: {class: 'sr-only'}
+                    }) }}
                 </div>
 
                 <div class="form-group">
-                    <label for="inputFirstName" class="sr-only">Имя</label>
-                    <input
-                        type="text"
-                        id="inputFirstName"
-                        name="firstName"
-                        value=""
-                        class="form-control"
-                        placeholder="Ваше Имя..."
-                        required
-                    >
-                </div>
-
-                <div class="form-group">
-                    <label for="inputPassword" class="sr-only">Пароль</label>
-                    <input
-                        type="password"
-                        id="inputPassword"
-                        name="password"
-                        class="form-control"
-                        placeholder="Ваш Пароль..."
-                        required
-                    >
-                </div>
-
-
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" name="agree"> Согласен с условиями
-                        </label>
-                    </div>
+                    {{ form_row(registrationForm.agreeTerms, {
+                        label: 'Согласен с условиями'
+                    }) }}
                 </div>
 
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
-            </form>
+                {{ form_end(registrationForm) }}
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
