Расширение полей и кастомная валидация

--- a/templates/admin/article/form.html.twig
+++ b/templates/admin/article/form.html.twig
@@ -2,7 +2,9 @@
     {{ form_row(articleForm.title) }}
     {{ form_row(articleForm.description) }}
     {{ form_row(articleForm.body) }}
-    {{ form_row(articleForm.publishedAt) }}
+    {% if articleForm.publishedAt is defined %}
+        {{ form_row(articleForm.publishedAt) }}
+    {% endif %}
     {{ form_row(articleForm.keyWords) }}
     {{ form_row(articleForm.author) }}
 
