--- a/templates/admin/articles/index.html.twig
+++ b/templates/admin/articles/index.html.twig
@@ -11,7 +11,6 @@
         <div class="col-12 p-0">
             <h1>Управление статьями ({{ pagination.totalItemCount }})</h1>
             <div><a class="btn btn-primary" href="{{ path('app_admin_articles_create') }}">Создать новую статью</a></div>
-            <div><a class="btn btn-primary" href="{{ path('app_admin_articles_edit', {id: 'id'}) }}">Редактировать статью</a></div>
             <form>
                 <div class="input-group mb-3">
                     <input type="text"
@@ -43,6 +42,7 @@
                     <th>Содержание</th>
                     <th>Автор</th>
                     <th>Опубликована</th>
+                    <th>Редактировать</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -53,6 +53,7 @@
                     <td>{{ article.body }}</td>
                     <td>{{ article.author.firstName }}</td>
                     <td><i class="fa fa-{{ article.isPublished ? 'check text-primary'  : 'times text-warning' }}"></i></td>
+                    <td><a href="{{ path('app_admin_articles_edit', { id: article.id}) }}"><i class="fas fa-pen"></i></a></td>
                 </tr>
                 {% else %}
                 <tr>
